--- a/contact.html
+++ b/contact.html
@@ -413,7 +413,7 @@ ul{
             <section class="contact">
           <div class="contact-form">
             <h1>Contact <span>Us</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dignissimos consequuntur eum aspernatur incidunt!</p>
+            <p>Contact us at the address, phone, and email down below! </p>
             <div class="container">
               <div class="contactInfo">
                 <div class="box">
